<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Notes App</string>

<!--    Text FragmentNotes -->
    <string name="empty_test_notes">There are no notes yet.</string>

<!--    Text FragmentMain -->
    <string name="empty_text_main">The list is empty on this date.</string>

<!--    Text FragmentAddEntry-->
    <string name="hint_entry">Write..</string>

<!--    Text FragmentFolders -->
    <string name="title_folders_fragment">Folders</string>
    <string name="default_name_folder">New folder</string>
    <string name="empty_text_folder">No folders have been created yet.</string>

<!--    Text menu Main -->
    <string name="title_menu_left">left</string>
    <string name="title_menu_right">right</string>
    <string name="title_menu_folders">folders</string>

<!--    Text AddFolderDialog -->
    <string name="title_add_folder_dialog">New folder</string>
    <string name="hint_add_folder_dialog">Name folder..</string>
    <string name="btn_dialog_folder_positive" tools:ignore="ButtonCase,Typos">Ok</string>
    <string name="btn_dialog_folder_negative">Cancel</string>

<!--    Text BottomFolderDialog -->
    <string name="title_bottom_folder_dialog">selected action:</string>

<!--    Text DialogDeleteFolder -->
    <string name="title_delete_folder_dialog">Remove folder</string>
    <string name="text_delete_folder_dialog">This folder will be deleted along with all its notes</string>
    <string name="btn_positive_delete_folder" tools:ignore="ButtonCase,Typos">Ok</string>
    <string name="btn_negative_delete_folder">Cancel</string>

<!--    Text DialogRenameFolder -->
    <string name="title_rename_folder_dialog">Rename folder</string>
    <string name="hint_rename_folder_dialog">New name folder..</string>
    <string name="btn_positive_rename_folder" tools:ignore="ButtonCase,Typos">Ok</string>
    <string name="btn_negative_rename_folder">Cancel</string>

<!--    Text DialogUpdateColorFolder -->
    <string name="title_update_dialog_folder">Color change</string>
    <string name="btn_negative_update_folder">Cancel</string>
    
<!--    Text NotesFragment -->
    <string name="description_notes_fragment">folder</string>

<!--    Text NoteFragment -->
    <string name="hint_title_note">Title</string>
    <string name="hint_text_note">Text</string>

<!--    Text DialogDeleteNote -->
    <string name="title_delete_note_dialog">Remove note</string>
    <string name="text_delete_note_dialog">The note will be permanently deleted</string>
    <string name="btn_positive_delete_note" tools:ignore="ButtonCase,Typos">Ok</string>
    <string name="btn_negative_delete_note">Cancel</string>

<!--    Text BottomNoteDialog -->
    <string name="title_bottom_note_dialog">selected action:</string>
</resources>
