<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_delete_folder_dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/title_delete_folder_dialog"
            android:textSize="16sp"
            android:textColor="@color/colorTextDark"
            android:fontFamily="@font/roboto_medium"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        </TextView>

        <TextView
            android:id="@+id/text_delete_folder_dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="70dp"
            android:text="@string/text_delete_folder_dialog"
            android:textSize="15sp"
            android:textColor="@color/colorTextLight"
            android:fontFamily="@font/roboto_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_delete_folder_dialog">

        </TextView>

        <TextView
            android:id="@+id/btn_positive_delete_folder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:paddingBottom="4dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="18dp"
            android:text="@string/btn_positive_delete_folder"
            android:textSize="16sp"
            android:textColor="@color/colorTextDark"
            android:fontFamily="@font/roboto_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        </TextView>

        <TextView
            android:id="@+id/btn_negative_delete_folder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="18dp"
            android:text="@string/btn_negative_delete_folder"
            android:textSize="16sp"
            android:textColor="@color/colorTextDark"
            android:fontFamily="@font/roboto_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_positive_delete_folder">

        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>