<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_add_folder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title_dialog_folder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/title_add_folder_dialog"
                android:textSize="16sp"
                android:textColor="@color/colorTextDark"
                android:fontFamily="@font/roboto_medium"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

            </TextView>

            <EditText
                android:id="@+id/edit_name_dialog_folder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="70dp"
                android:hint="@string/hint_add_folder_dialog"
                android:background="@null"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:imeOptions="actionDone"
                android:textSize="15sp"
                android:textColor="@color/colorTextDark"
                android:inputType="text|textNoSuggestions|textCapSentences"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_dialog_folder"
                tools:ignore="Autofill">

            </EditText>

            <TextView
                android:id="@+id/btn_dialog_folder_positive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:paddingBottom="4dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="18dp"
                android:text="@string/btn_dialog_folder_positive"
                android:textSize="16sp"
                android:textColor="@color/colorTextDark"
                android:fontFamily="@font/roboto_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

            </TextView>

            <TextView
                android:id="@+id/btn_dialog_folder_negative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="18dp"
                android:text="@string/btn_dialog_folder_negative"
                android:textSize="16sp"
                android:textColor="@color/colorTextDark"
                android:fontFamily="@font/roboto_medium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_dialog_folder_positive">

            </TextView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>